[tool.poetry]
name = "meeple-matchmaker"
version = "0.1.0"
description = "A board game recommendation system"
authors = ["Miles <miles@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scipy = "^1.14.1"
plotly = "^5.24.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
pyspark = "^3.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
